fix: more spacing fixing (sorry T-T)

--- a/NieR-Import.theme.css
+++ b/NieR-Import.theme.css
@@ -2346,6 +2346,9 @@ strong {
   display: none;
 }
 
+.scroller_fea3ef.none_c49869.scrollerBase_c49869 .tutorialContainer_f9623d .listItem_c96c45 {
+  margin-bottom: 0;
+}
 .scroller_fea3ef.none_c49869.scrollerBase_c49869 .tutorialContainer_f9623d .listItem_c96c45 .wrapperSimple_c5f96a {
   height: 57px;
 }
