--- a/src/guilds/_guilds.scss
+++ b/src/guilds/_guilds.scss
@@ -41,6 +41,7 @@
 }
 .scroller_fea3ef.none_c49869.scrollerBase_c49869 {
 	.tutorialContainer_f9623d .listItem_c96c45 {
+		margin-bottom: 0;
 		.wrapperSimple_c5f96a {
 			height: 57px;
 		}
